--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
 			</section>
 
 			<section>
+				<h2>Let me introduce Jade</h2>
+				<h3>Bring on the isomorphic web stack</h3>
+			</section>
+
+			<section>
 				<h2>Here to save the day</h2>
 				<p>
 					<ul>
